--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
+    margin-top: 20px;
+    background-color: #a8c6c3;
 }
+
 #calorieInput {
     margin-bottom: 80px;
     margin-top: 20px;
